Update including image.

--- a/tetris/tetris-pygame.ipynb
+++ b/tetris/tetris-pygame.ipynb
@@ -1106,24 +1106,25 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inside game function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "game()"
+    "# Start game\n",
+    "#game()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Possible improvements:\n",
+    "This is how it looks like \n",
+    "<img src=\"tetris3.png\" width=\"200\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Possible improvements:**\n",
     "\n",
     "* add background music\n",
     "* add special sounds for points\n",
